Version 1.3.1 release Check CHANGELOG for details